@startuml
hide circle
skinparam linetype ortho

entity "usuarios" as u {
  * id : SERIAL <<PK>>
  --
  * nombre : VARCHAR(100)
  * email : VARCHAR(150)
  * es_admin : BOOLEAN
}

entity "categorias" as c {
  * id : SERIAL <<PK>>
  --
  * nombre : VARCHAR(100)
}

entity "productos" as p {
  * id : SERIAL <<PK>>
  --
  * nombre : VARCHAR(150)
  * precio : NUMERIC(10,2)
  * categoria_id : INTEGER <<FK>>
}

entity "stock_productos" as sp {
  * producto_id : INTEGER <<PK, FK>>
  --
  * cantidad : INTEGER
}

entity "pedidos" as ped {
  * id : SERIAL <<PK>>
  --
  * usuario_id : INTEGER <<FK>>
  * fecha : TIMESTAMP
  * total : NUMERIC(12,2)
}

entity "detalle_pedidos" as dp {
  * pedido_id : INTEGER <<PK, FK>>
  * producto_id : INTEGER <<PK, FK>>
  --
  * cantidad : INTEGER
  * precio_unitario : NUMERIC(10,2)
}

u ||--o{ ped
c ||--o{ p
p ||--|| sp
ped ||--o{ dp
p ||--o{ dp
@enduml